--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,31 +3,24 @@
 
   {% include head.html %}
 
-  
-
   <body>
-
- <div class="ui bottom attached segment pushable">
-  <div class="ui visible left vertical sidebar menu">
-    {% for my_page in site.pages %}
-      {% if my_page.title %}
-      <a class="item" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-      {% endif %}
-    {% endfor %}
-  </div>
-  <div class="pusher">
-    <div class="ui basic segment">
-      <h3 class="ui header">{% include header.html %}
-</h3>
-
+    {% include header.html %}
+    <div class="ui grid main container">
+      <div class="four wide column">
+        <div class="ui secondary vertical menu">
+          {% for my_page in site.pages %}
+            {% if my_page.title %}
+            <a class="item" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+            {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+      <div class="twelve wide column">
           {{ content }}
 
-      {% include footer.html %}
-
+          {% include footer.html %}
+      </div>
     </div>
-  </div>
-</div>
-
 
   </body>
 
