Modify the menu and the page content buffer.

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,4 +54,10 @@ $on-laptop:        800px;
 
 ;
 
+.main.container {
+  margin-top: 3em;
+}
 
+.ui.attached.stackable.secondary.pointing.menu {
+  font-size: 1.3rem;
+}
