--- a/_includes/pages_list.html
+++ b/_includes/pages_list.html
@@ -1,9 +1,9 @@
 {% for node in pages_list %}
   {% if group == null or group == node.group %}
     {% if page.url == node.url %}
-      <a href="{{node.url}}" class="item active">{{node.title}}</a></li>
+      <a href="{{node.url | prepend: site.baseurl }}" class="item active">{{node.title}}</a></li>
     {% else %}
-      <a href="{{node.url}}" class="item">{{node.title}}</a> 
+      <a href="{{node.url | prepend: site.baseurl }}" class="item">{{node.title}}</a> 
     {% endif %}
   {% endif %}
 {% endfor %}
